[package]
name = "memory"
version = "0.1.0"
authors = ["Gerd Reiss <gerd@reiss.pro>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
slint = "1.6"

[build-dependencies]
slint-build = "1.6"
